# meteo

./: Cargo.toml
examples/: parse.rs  plot-rain.rs  plot-temp.rs  retrieve-all.rs
original-reports/: 2006_05.txt  2006_06.txt  2006_07.txt  2006_08.txt  2006_09.txt  2006_10.txt  2006_11.txt  2006_12.txt  2007_01.txt  2007_02.txt  2007_03.txt  2007_04.txt  2007_05.txt  2007_06.txt  2007_07.txt  2007_08.txt  2007_09.txt  2007_10.txt  2007_11.txt  2007_12.txt  2008_01.txt  2008_02.txt  2008_03.txt  2008_04.txt  2008_06.txt  2008_07.txt  2008_08.txt  2008_09.txt  2008_10.txt  2008_11.txt  2008_12.txt  2009_01.txt  2009_02.txt  2009_03.txt  2009_04.txt  2009_05.txt  2009_06.txt  2009_07.txt  2009_08.txt  2009_09.txt  (+158 more)
src/: lib.rs
