[package]
name = "meteo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.58"
time = "0.3.34"
ureq = "2.9.6"

[dev-dependencies]
chrono = "0.4.37"
plotters = "0.3.5"
